--- a/Unit02/40461_Mod04_4.4.ipynb
+++ b/Unit02/40461_Mod04_4.4.ipynb
@@ -745,57 +745,111 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "40"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# [ ] open a new file days.txt in write plus read mode 'w+' \n",
         "# [ ] write week days (Monday - Friday) on separate lines to the file\n",
         "\n",
-        "days_text = open(\"days.txt\", \"r\")\n"
+        "days_text = open(\"days.txt\", \"w+\")\n",
+        "days_text.write(\"Monday\\nTuesday\\nWednesday\\nThursday\\nFriday\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Monday\n",
+            "Tuesday\n",
+            "Wednesday\n",
+            "Thursday\n",
+            "Friday\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] use .seek() to move the pointer to the start of the file\n",
         "# [ ] use .read() to read the entire file contents\n",
         "# [ ] print the entire file contents and close the file\n",
-        "\n"
+        "days_text.seek(0)\n",
+        "days = days_text.read()\n",
+        "print(days)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "16"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# [ ] use .seek() to move the pointer to the end of the file\n",
         "# [ ] write the weekend days (Saturday & Sunday)\n",
-        "\n"
+        "days_text.seek(0,2)\n",
+        "days_text.write(\"\\nSaturday\\nSunday\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Monday\n",
+            "Tuesday\n",
+            "Wednesday\n",
+            "Thursday\n",
+            "Friday\n",
+            "Saturday\n",
+            "Sunday\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] use .seek() to move the pointer to the start of the file\n",
         "# [ ] use .read() to read the entire file contents\n",
         "# [ ] print the entire file contents and close the file\n",
-        "\n",
+        "days_text.seek(0)\n",
+        "days = days_text.read()\n",
+        "print(days)\n",
         "\n"
       ]
     },
@@ -861,7 +915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "trusted": false
       },
@@ -884,7 +938,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "trusted": false
       },
@@ -898,7 +952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "trusted": false
       },
@@ -912,11 +966,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1: log\n",
+            "2: logg\n",
+            "3: logg\n",
+            "4: quit\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example - calls the above logger() function\n",
         "# what happens running the cell above (a+) again before running this cell again? \n",
@@ -944,11 +1011,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Count is: 0\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example - create a file with initial count of 0\n",
         "count_file = open(\"count_file.txt\", \"w+\")\n",
@@ -962,11 +1037,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "BEFORE\n",
+            "Count is: 1\n",
+            "\n",
+            "AFTER\n",
+            "Count is: 2\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example - can rerun this cell\n",
         "count_file = open(\"count_file.txt\", \"r+\")\n",
@@ -990,7 +1077,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "collapsed": true,
         "trusted": false
@@ -1010,11 +1097,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "BEFORE\n",
+            "Count is: 2\n",
+            "\n",
+            "AFTER inc_count() call 1 \n",
+            "Count is: 3\n",
+            "\n",
+            "AFTER inc_count() call 2 \n",
+            "Count is: 4\n",
+            "\n",
+            "AFTER inc_count() call 3 \n",
+            "Count is: 5\n",
+            "\n",
+            "AFTER inc_count() call 4 \n",
+            "Count is: 6\n",
+            "\n",
+            "AFTER inc_count() call 5 \n",
+            "Count is: 7\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example with call to function: inc_count() - **Run cell multiple times**\n",
         "# opens file/prints initial value\n",
@@ -1051,20 +1162,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Line1\n",
+            "Line2\n",
+            "Line3\n",
+            "append #0\n",
+            "append #1\n",
+            "append #2\n",
+            "append #3\n",
+            "append #4\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] complete the task\n",
         "task4_file = open('task4_file.txt', 'w+')\n",
         "task4_file.write(\"Line1\\nLine2\\nLine3\\n\")\n",
         "task4_file.close()\n",
         "# [ ] code here\n",
+        "task4_file = open('task4_file.txt', 'a+')\n",
+        "for item in range(5):\n",
+        "    task4_file.write(\"append #\" + str(item)+\"\\n\")\n",
+        "    task4_file.seek(0)\n",
         "\n",
-        "\n",
-        "\n"
+        "task4 = task4_file.read()\n",
+        "print(task4)\n"
       ]
     },
     {
@@ -1087,11 +1218,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Line\n",
+            "Line2\n",
+            "Line3\n",
+            "Line4\n",
+            "Line5\n",
+            "Line6\n",
+            "Line7\n",
+            "Line8\n",
+            "Line9\n",
+            "Line10\n",
+            " \n",
+            "\n",
+            "5\n",
+            "10\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] complete the task\n",
         "task5_file = open('task5_file.txt', 'w+')\n",
@@ -1100,7 +1253,14 @@
         "print(task5_file.read(),\"\\n\")\n",
         "task5_file.close()\n",
         "# [ ] code here\n",
-        "\n",
+        "task5_file = open(\"task5_file.txt\", \"r+\")\n",
+        "task5_file.seek(0)\n",
+        "for item in range(1,6):\n",
+        "    task5_file.write(\"write (r+)#\"+str(item)+\"\\n\")\n",
+        "    task5_file.seek(item*11)\n",
+        "    \n",
+        "task5 = task5_file.read()\n",
+        "print(task5)\n",
         "\n",
         "\n"
       ]
