--- a/Unit02/40461_Mod04_Project4.ipynb
+++ b/Unit02/40461_Mod04_Project4.ipynb
@@ -91,15 +91,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100   222  100   222    0     0   7655      0 --:--:-- --:--:-- --:--:--  7655\n",
+      "City of Beijing month ave: highest high is 30.9 Celisius\n",
+      "City of Cairo month ave: highest high is 34.7 Celisius\n",
+      "City of London month ave: highest high is 23.5 Celisius\n",
+      "City of Nairobi month ave: highest high is 26.3 Celisius\n",
+      "City of New York City month ave: highest high is 28.9 Celisius\n",
+      "City of Sydney month ave: highest high is 26.5 Celisius\n",
+      "City of Tokyo month ave: highest high is 30.8 Celisius\n",
+      "City of Rio de Janeiro month ave: highest high is 30.0 Celisius\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [57], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mlen\u001b[39m(mean_temp_line) \u001b[39m>\u001b[39m count:\n\u001b[1;32m     17\u001b[0m     mean_temp \u001b[39m=\u001b[39m mean_temp_file\u001b[39m.\u001b[39mreadline()\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 18\u001b[0m     \u001b[39mprint\u001b[39m(headings[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtitle() \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m of \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m mean_temp[\u001b[39m0\u001b[39m], headings[\u001b[39m2\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m is \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39mmean_temp[\u001b[39m2\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m Celisius\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m     count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     21\u001b[0m mean_temp_file\u001b[39m.\u001b[39mclose()\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "# [] create The Weather\n",
     "\n",
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/world_temp_mean.csv -o mean_temp.txt\n",
+    "#adding rio onto end of file\n",
+    "mean_temp_file = open(\"mean_temp.txt\", \"a+\")\n",
+    "mean_temp_file.write(\"Rio de Janeiro,Brazil,30.0,18.0\")\n",
     "\n",
+    "#grab headings \n",
+    "mean_temp_file.seek(0)\n",
+    "mean_temp_line = mean_temp_file.readline()\n",
+    "headings = mean_temp_line.split(\",\")\n",
+    "\n",
+    "\n",
+    "#read & format remaining from file using while \n",
+    "count = -10\n",
+    "while len(mean_temp_line) > count:\n",
+    "    mean_temp = mean_temp_file.readline().split(\",\")\n",
+    "    print(headings[0].title() + \" of \" + mean_temp[0], headings[2]+\" is \"+mean_temp[2] + \" Celisius\")\n",
+    "    count += 1\n",
+    "\n",
+    "mean_temp_file.close()\n",
     "\n",
     "\n"
    ]
@@ -129,7 +176,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
