--- a/Unit02/40461_Mod04_Project4.ipynb
+++ b/Unit02/40461_Mod04_Project4.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100   222  100   222    0     0   7655      0 --:--:-- --:--:-- --:--:--  7655\n",
+      "100   222  100   222    0     0   5285      0 --:--:-- --:--:-- --:--:--  5285\n",
       "City of Beijing month ave: highest high is 30.9 Celisius\n",
       "City of Cairo month ave: highest high is 34.7 Celisius\n",
       "City of London month ave: highest high is 23.5 Celisius\n",
@@ -111,17 +111,6 @@
       "City of Sydney month ave: highest high is 26.5 Celisius\n",
       "City of Tokyo month ave: highest high is 30.8 Celisius\n",
       "City of Rio de Janeiro month ave: highest high is 30.0 Celisius\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [57], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mlen\u001b[39m(mean_temp_line) \u001b[39m>\u001b[39m count:\n\u001b[1;32m     17\u001b[0m     mean_temp \u001b[39m=\u001b[39m mean_temp_file\u001b[39m.\u001b[39mreadline()\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 18\u001b[0m     \u001b[39mprint\u001b[39m(headings[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mtitle() \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m of \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m mean_temp[\u001b[39m0\u001b[39m], headings[\u001b[39m2\u001b[39m]\u001b[39m+\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m is \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39mmean_temp[\u001b[39m2\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m Celisius\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m     count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     21\u001b[0m mean_temp_file\u001b[39m.\u001b[39mclose()\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -136,12 +125,13 @@
     "#grab headings \n",
     "mean_temp_file.seek(0)\n",
     "mean_temp_line = mean_temp_file.readline()\n",
+    "mean_temp_lines = mean_temp_file.readlines()\n",
     "headings = mean_temp_line.split(\",\")\n",
     "\n",
-    "\n",
     "#read & format remaining from file using while \n",
-    "count = -10\n",
-    "while len(mean_temp_line) > count:\n",
+    "count = 0\n",
+    "mean_temp_file.seek(len(mean_temp_line))\n",
+    "while len(mean_temp_lines) > count:\n",
     "    mean_temp = mean_temp_file.readline().split(\",\")\n",
     "    print(headings[0].title() + \" of \" + mean_temp[0], headings[2]+\" is \"+mean_temp[2] + \" Celisius\")\n",
     "    count += 1\n",
