--- a/Unit02/40461_Mod05_FinalProject.ipynb
+++ b/Unit02/40461_Mod05_FinalProject.ipynb
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
         "trusted": false
@@ -96,17 +96,19 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100   161  100   161    0     0   5551      0 --:--:-- --:--:-- --:--:--  5551\n",
+            "100   161  100   161    0     0    649      0 --:--:-- --:--:-- --:--:--   646\n",
             "List any 5 of the first 20 elements in the Period table\n",
+            "Enter the name of an element: gold\n",
             "Enter the name of an element: boron\n",
-            "Enter the name of an element: helium\n",
-            "Enter the name of an element: god\n",
-            "Enter the name of an element: cod\n",
-            "Enter the name of an element: tom\n",
+            "Enter the name of an element: silver\n",
+            "Enter the name of an element: bronze\n",
+            "gold already answered, try again\n",
+            "element name only, try again\n",
+            "Enter the name of an element: argon\n",
             "\n",
             "40% Correct\n",
-            "Correct: boron, helium\n",
-            "Incorrect: god, cod, tom\n"
+            "Correct: boron, argon\n",
+            "Incorrect: gold, silver, bronze\n"
           ]
         }
       ],
