--- a/Unit03/3-1.1_intro_Python.ipynb
+++ b/Unit03/3-1.1_intro_Python.ipynb
@@ -94,9 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "x = -5\n",
@@ -105,9 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math as ml\n",
     "y = 12\n",
@@ -116,9 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from math import fabs\n",
     "fabs(-5)"
@@ -139,23 +172,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Import the math module and use an appropriate function to find the greatest common divisor of 16 and 28\n",
     "\n",
-    "\n"
+    "from math import gcd\n",
+    "gcd(16,28)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Prompt the user to input 2 positive integers then print their greatest common divisor\n",
-    "\n"
+    "num1 = int(input(\"number 1\"))\n",
+    "num2 = int(input(\"number 2\"))\n",
+    "\n",
+    "from math import gcd\n",
+    "gcd(num1, num2)"
    ]
   },
   {
@@ -250,9 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "a = 3\n",
@@ -272,9 +340,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# Even number (print 0)\n",
     "print(102 % 2)\n",
@@ -295,16 +372,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number is odd\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Fill out the function is_even with a code block that returns True if n is even and returns False if n is odd\n",
     "\n",
     "def is_even(n):\n",
-    "    #TODO\n",
+    "    import math \n",
+    "    if n % 2 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "\n",
     "# Test the function \n",
     "x = 5\n",
@@ -318,19 +407,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square root of 34 is: 5.830951894845301\n",
+      "Square root of 2 is: 1.4142135623730951\n",
+      "Square root of 26 is: 5.0990195135927845\n",
+      "Square root of 44 is: 6.6332495807108\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Use the function is_even to print the square root of all the even numbers in the following list\n",
     "\n",
     "l = [25, 34, 193, 2, 81, 26, 44]\n",
     "\n",
     "def is_even(n):\n",
-    "    return (n % 2) == 0\n",
-    "\n"
+    "    import math\n",
+    "    for i in n:\n",
+    "        if (i % 2) == 0:\n",
+    "            print(\"Square root of\", i, \"is:\", math.sqrt(i))\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "is_even(l)"
    ]
   },
   {
@@ -373,9 +479,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "5 + 2 * 8"
    ]
@@ -389,9 +506,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(5 + 2) * 8"
    ]
@@ -407,9 +535,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "12 / 4 * 3"
    ]
@@ -423,9 +562,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Method 1\n",
     "12 / (4 * 3)"
@@ -433,9 +583,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Method 2\n",
     "12 / 4 / 3"
@@ -453,29 +614,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Correct the following expression so the answer is 10\n",
     "\n",
-    "4 + 16 / 2\n",
+    "(4 + 16) / 2\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "250"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] Correct the following expression so the answer is 250; review the operator precedence table and use only one () pair\n",
     "\n",
-    "2 * 3 + 2 ** 3\n",
+    "2 * (3 + 2) ** 3\n",
     "\n"
    ]
   },
@@ -544,27 +727,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You get 106  and your friend gets  107\n"
+     ]
+    }
+   ],
    "source": [
     "from math import floor, ceil, trunc\n",
     "\n",
     "prize = 213\n",
     "\n",
     "option1 = floor(213 / 2)\n",
-    "print(\"You get\", option1, \" and your friend gets \", prize - option1)"
+    "print(\"You get\", option1, \" and your friend gets \", prize - option1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You get 107  and your friend gets  106\n"
+     ]
+    }
+   ],
    "source": [
     "from math import floor, ceil, trunc\n",
     "\n",
@@ -586,18 +785,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n",
+      "76\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Use an appropriate rounding function to round 75.34 to 75 and then to 76\n",
     "\n",
     "import math\n",
     "\n",
     "x = 75.34\n",
-    "\n"
+    "\n",
+    "print(math.floor(x))\n",
+    "print(math.ceil(x))"
    ]
   },
   {
@@ -610,9 +820,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total price:  870\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Use an appropriate rounding function to fix the following `float` error\n",
     "\n",
@@ -623,7 +841,7 @@
     "q = 200\n",
     "\n",
     "# Order total price (Should be 4.35 * 200 = $870.00)\n",
-    "total = p * q\n",
+    "total = math.ceil(p * q)\n",
     "\n",
     "print(\"Total price: \", total)\n",
     "\n"
@@ -653,9 +871,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "print(randint(1, 10))"
@@ -671,9 +897,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randrange\n",
     "print(randrange(1, 11))"
@@ -690,9 +924,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randrange\n",
     "print(randrange(1, 11, 2))"
@@ -711,9 +953,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randint\n",
     "\n",
@@ -722,7 +972,7 @@
     "\n",
     "\n",
     "# roll a die\n",
-    "print(die_roller())"
+    "print(die_roller())\n"
    ]
   },
   {
@@ -735,9 +985,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randrange\n",
     "\n",
@@ -760,48 +1018,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Modify the die_roller() function to use randrange instead of randint\n",
-    "\n"
+    "\n",
+    "from random import randrange\n",
+    "\n",
+    "def die_roller ():\n",
+    "    return (randrange(1, 7))\n",
+    "\n",
+    "\n",
+    "# roll a die\n",
+    "print(die_roller())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 248,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "67\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Modify the odd_random() function to use randint instead of randrange\n",
-    "\n"
+    "\n",
+    "from random import randint\n",
+    "\n",
+    "def odd_random():\n",
+    "    number =  (randint(1, 101))\n",
+    "    if (number % 2) != 0:\n",
+    "        return number\n",
+    "\n",
+    "\n",
+    "# Generate an odd random integer\n",
+    "print(odd_random())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Complete the function dice_roller() so it rolls 2 dice\n",
     "# Use the die_roller function\n",
     "\n",
     "from random import randint\n",
     "\n",
-    "def die_roller():\n",
-    "    return(randint(1, 6))\n",
     "\n",
     "def dice_roller():\n",
-    "    #TODO\n",
+    "    print(randint(1, 6), randint(1,6))\n",
     "\n",
-    "print(dice_roller())\n",
+    "dice_roller()\n",
     "\n"
    ]
   },
@@ -825,9 +1123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 416,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scissors\n"
+     ]
+    }
+   ],
    "source": [
     "from random import choice\n",
     "\n",
@@ -835,7 +1141,7 @@
     "def RPS():\n",
     "    options = ['Rock', 'Paper', 'Scissors']\n",
     "    # return one of the elements at random\n",
-    "    return (choice(options))\n",
+    "    return choice(options)\n",
     "\n",
     "# Generate an option\n",
     "print(RPS());"
@@ -852,9 +1158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 403,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['John', 'Ana', 'Mike', 'Sally']\n"
+     ]
+    }
+   ],
    "source": [
     "from random import shuffle\n",
     "\n",
@@ -879,9 +1193,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 432,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jack', 'Spades']\n"
+     ]
+    }
+   ],
    "source": [
     "from random import choice\n",
     "\n",
@@ -911,25 +1233,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 436,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 6, 'Jack', 5, 8, 'King', 2, 10, 'Queen', 'Ace', 7, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Modify the pick_card() function to use `shuffle` instead of choice\n",
-    "\n"
+    "\n",
+    "from random import shuffle\n",
+    "\n",
+    "def pick_card():\n",
+    "    card_type = ['Clubs', 'Diamonds', 'Hearts', 'Spades'];\n",
+    "    card_number = ['Ace', 2, 3, 4, 5, 6, 7, 8, 9, 10, 'Jack', 'Queen', 'King']\n",
+    "    \n",
+    "    # choose a type at random\n",
+    "    shuffle(card_number)\n",
+    "    \n",
+    "    return card_number\n",
+    "\n",
+    "# Show the randomly picked card\n",
+    "print(pick_card())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 443,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Diego\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] The following list contain the 10 most populous American cities; write code to randomly select one of the cities to visit\n",
     "cities = [\"New York\", \"Los Angeles\", \"Chicago\", \"Houston\", \"Phoenix\", \"Philadelphia\", \"San Antonio\", \"San Diego\", \"Dallas\", \"San Jose\"]\n",
-    "\n"
+    "\n",
+    "from random import choice\n",
+    "\n",
+    "def what_city():\n",
+    "    return choice(cities)\n",
+    "\n",
+    "print(what_city())\n"
    ]
   }
  ],
@@ -949,7 +1306,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
